--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -33,7 +33,7 @@
                 </li>
                 <li class="divider"></li>
                 <li>
-                    <a href="#/private/addPlayer" class="red-text text-lighten-1 center tooltipped" 
+                    <a href="#/private/addPlayer/{{meta._id}}" class="red-text text-lighten-1 center tooltipped" 
                        data-position="right" data-delay="20" data-tooltip="{{'mainEffective.buttons.addPlayer' | translate }}">
                             <i class="material-icons center">person_add</i>
                     </a>
