--- a/src/app/components/directives/headerMenu/headerMenu.html
+++ b/src/app/components/directives/headerMenu/headerMenu.html
@@ -149,8 +149,8 @@
         </div>
 
         <div class="modal-footer">
-            <button type="submit" class="waves-effect waves-red btn teal" translate="popup.buttons.submit"/>
-            <a href="#/" class="modal-action modal-close waves-effect waves-red btn red">{{'popup.buttons.cancel' |
+            <button type="submit" class="waves-effect waves-red btn teal" translate="commons.buttons.validate"/>
+            <a href="#/" class="modal-action modal-close waves-effect waves-red btn red">{{'commons.buttons.cancel' |
                 translate}}</a>
         </div>
     </form>
