--- a/src/app/modules/sandbox/effective/mainEffective.html
+++ b/src/app/modules/sandbox/effective/mainEffective.html
@@ -45,6 +45,32 @@
 
     <!-- player list-->
     <div class="row">
+        <div class="col m3 animated fadeInUp" style="-webkit-animation-duration:{{$index * 300}}ms" ng-repeat="player in effective">
+            <div class="card blue lighten-1">
+                <div class="card-content center-align">
+                    <div class="card-title truncate">{{player.firstname}} {{player.name}}</div>
+                    <img class="circle responsive-img" src="assets/images/user.png">
+                    <p class="blue-text text-darken-4">{{player.age}} {{'commons.format.ageYear' | translate }} - {{player.status.height}} {{'commons.format.height' | translate }} / {{player.status.weight}} {{'commons.format.weight' | translate }}</p>
+                    <br>
+                    <div class="row">
+                        <div class="col m1 hide-on-small-only">&nbsp;</div>
+                        <div class="col m3 s12 center-align"><a href="#/private/viewPlayer"><i class="white-text small mdi-action-face-unlock"></i></a></div>
+                        <div class="col m4 s12 center-align"><a href=""><i class="white-text small mdi-action-highlight-remove"></i></a></div>
+                        <div class="col m3 s12 center-align"><a href=""><i class="white-text small fa fa-bar-chart" ></i></a></div>
+                        <div class="col m1 .hide-on-small-only">&nbsp;</div>
+                    </div>
+                    <div class="row">
+                        <div class="col m2 hide-on-small-only">&nbsp;</div>
+                        <div class="col m8 s12 center-align truncate">
+                            <a href="#" class="white-text"><h5>{{player.positionType}}</h5></a>
+                        </div>
+                        <div class="col m2 .hide-on-small-only">&nbsp;</div>
+                    </div>
+                </div>
+            </div><!--/card-->
+        </div>
+    </div>
+    <div class="row">
         <div class="col s12">    
             <ul class="collection">
                 <li class="collection-item avatar" ng-repeat="player in effective">
@@ -53,7 +79,7 @@
                         <img src="assets/images/user.png" alt="" class="circle responsive-img">
                     </a>
                     <span class="title blue-text text-lighten-1">{{player.firstname}} {{player.name}} - {{player.positionType}}</span>
-                    <p>{{player.age}} ans - {{player.status.height}} cm / {{player.status.weight}} kg
+                    <p>{{player.age}} {{'commons.format.ageYear' | translate }} - {{player.status.height}} {{'commons.format.ageYear' | translate }} / {{player.status.weight}} {{'commons.format.ageYear' | translate }}
                         <br/>
                         {{player.stateForm}}
                     </p>
